k8s/manifests/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: a1-deploy
  name: a1-deploy
spec:
  selector:
    app: a1-deploy
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
